update: support more customization of media

--- a/src/experiment/plugins/upload/upload.component.html
+++ b/src/experiment/plugins/upload/upload.component.html
@@ -16,13 +16,13 @@
       <nz-form-item>
         <nz-form-label>图库</nz-form-label>
         <nz-form-control>
-          <app-pictures formControlName="pictures"></app-pictures>
+          <app-pictures-input formControlName="pictures"></app-pictures-input>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
         <nz-form-label>视频库</nz-form-label>
         <nz-form-control>
-          <app-videos formControlName="videos"></app-videos>
+          <app-videos-input formControlName="videos"></app-videos-input>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
