--- a/src/app/common/components/videos/videos.component.html
+++ b/src/app/common/components/videos/videos.component.html
@@ -1,51 +1,65 @@
+<ng-template #uploadRef>
+  <wpx-upload-transport
+    [wpxExt]="'video'"
+    [wpxAccept]="['video/mp4']"
+    (wpxChange)="upload($event)"
+  ></wpx-upload-transport>
+</ng-template>
+
+<ng-template #shopSearchRef>
+  <nz-select nzBorderless [(ngModel)]="shop" (ngModelChange)="shopChange()">
+    <ng-container *ngFor="let item of shopItems">
+      <nz-option [nzValue]="item._id" [nzLabel]="item.name"></nz-option>
+    </ng-container>
+  </nz-select>
+</ng-template>
+
+<wpx-tags [wpxApi]="tags" [wpxFilter]="tagFilter" [wpxForm]="tagForm"> </wpx-tags>
+<ng-template #tagSearchRef>
+  <nz-select
+    style="min-width: 180px"
+    nzMode="multiple"
+    nzPlaceHolder="筛选标签"
+    i18n-nzPlaceHolder
+    nzAllowClear
+    nzBorderless
+    [(ngModel)]="tagIds"
+    [nzServerSearch]="true"
+    (nzOnSearch)="getTags($event)"
+    (ngModelChange)="getData(true)"
+  >
+    <ng-container *ngFor="let item of tagItems">
+      <nz-option [nzLabel]="item.name" [nzValue]="item._id"></nz-option>
+    </ng-container>
+  </nz-select>
+</ng-template>
+
 <ng-template #searchRef>
-  <!--  <nz-space *ngIf="media.modalRef?.componentInstance as view">-->
-  <!--    <nz-button-group *nzSpaceItem>-->
-  <!--      <button nz-button nzType="text" nz-tooltip="刷新" i18n-nz-tooltip (click)="view.getData(true)">-->
-  <!--        <i nz-icon nzType="reload"></i>-->
-  <!--      </button>-->
-  <!--      <button nz-button nzType="text" nz-tooltip="重置" i18n-nz-tooltip (click)="view.clearSearch()">-->
-  <!--        <i nz-icon nzType="clear"></i>-->
-  <!--      </button>-->
-  <!--    </nz-button-group>-->
-  <!--    <nz-input-group *nzSpaceItem style="width: 180px" nzSuffixIcon="search">-->
-  <!--      <input-->
-  <!--        type="text"-->
-  <!--        nz-input-->
-  <!--        placeholder="搜索"-->
-  <!--        i18n-placeholder-->
-  <!--        [(ngModel)]="view.searchText"-->
-  <!--        [ngModelOptions]="{ standalone: true }"-->
-  <!--        (keyup.enter)="view.getData(true)"-->
-  <!--      />-->
-  <!--    </nz-input-group>-->
-  <!--    <nz-select-->
-  <!--      *nzSpaceItem-->
-  <!--      style="min-width: 180px"-->
-  <!--      nzMode="multiple"-->
-  <!--      nzPlaceHolder="筛选标签"-->
-  <!--      nzAllowClear-->
-  <!--      nzBorderless-->
-  <!--      [(ngModel)]="view.tagIds"-->
-  <!--      [ngModelOptions]="{ standalone: true }"-->
-  <!--      [nzServerSearch]="true"-->
-  <!--      (nzOnSearch)="view.getTags($event)"-->
-  <!--      (ngModelChange)="view.getData(true)"-->
-  <!--    >-->
-  <!--      <ng-container *ngFor="let item of view.tagOptions">-->
-  <!--        <nz-option [nzLabel]="item.name" [nzValue]="item._id"></nz-option>-->
-  <!--      </ng-container>-->
-  <!--    </nz-select>-->
-  <!--  </nz-space>-->
+  <nz-space>
+    <nz-input-group *nzSpaceItem style="width: 180px" nzSuffixIcon="search">
+      <input
+        (keyup.enter)="getData(true)"
+        [(ngModel)]="searchText"
+        type="text"
+        nz-input
+        placeholder="搜索"
+        i18n-placeholder
+      />
+    </nz-input-group>
+    <nz-button-group *nzSpaceItem>
+      <button nz-button nzType="text" nz-tooltip="刷新" i18n-nz-tooltip (click)="getData(true)">
+        <i nz-icon nzType="reload"></i>
+      </button>
+      <button nz-button nzType="text" nz-tooltip="重置" i18n-nz-tooltip (click)="clear()">
+        <i nz-icon nzType="clear"></i>
+      </button>
+    </nz-button-group>
+  </nz-space>
 </ng-template>
 
 <wpx-media
-  #media
+  [wpxData]="ds"
   [wpxType]="'videos'"
   [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"
-  [wpxLimit]="limit"
-  [wpxMax]="max"
-  [wpxSearch]="searchRef"
-  [(ngModel)]="values"
-  (ngModelChange)="onChanged($event)"
+  [wpxForm]="form"
 ></wpx-media>
