--- a/src/experiment/resources/pictures/pictures.component.html
+++ b/src/experiment/resources/pictures/pictures.component.html
@@ -1,22 +1,7 @@
 <nz-page-header [nzGhost]="false">
   <nz-page-header-title i18n>图片</nz-page-header-title>
   <nz-page-header-tags>
-    <nz-select
-      style="min-width: 180px"
-      nzMode="multiple"
-      nzPlaceHolder="筛选标签"
-      i18n-nzPlaceHolder
-      nzAllowClear
-      nzBorderless
-      [(ngModel)]="tagIds"
-      [nzServerSearch]="true"
-      (nzOnSearch)="getTags($event)"
-      (ngModelChange)="getData(true)"
-    >
-      <ng-container *ngFor="let item of tagItems">
-        <nz-option [nzLabel]="item.name" [nzValue]="item._id"></nz-option>
-      </ng-container>
-    </nz-select>
+    <ng-container *ngTemplateOutlet="view.tagSearchRef"></ng-container>
   </nz-page-header-tags>
   <nz-page-header-extra>
     <nz-space>
@@ -30,11 +15,10 @@
           nzShape="circle"
           nz-tooltip="设置标签"
           i18n-nz-tooltip
-          (click)="tagsRef.open()"
+          (click)="view.tagsRef.open()"
         >
           <i nz-icon nzType="tags"></i>
         </button>
-        <wpx-tags #tagsRef [wpxApi]="tags"> </wpx-tags>
       </ng-container>
     </nz-space>
   </nz-page-header-extra>
@@ -45,46 +29,21 @@
           <span nz-icon nzType="check-circle"></span>
           上传不超出 {{ (wpx.upload | async)?.limit | nzBytes : 0 : 'KB' }}，支持 jpeg、png、bmp、gif、webp、avif 等格式
         </p>
-        <nz-space>
-          <nz-input-group *nzSpaceItem style="width: 180px" nzSuffixIcon="search">
-            <input
-              (keyup.enter)="getData(true)"
-              [(ngModel)]="searchText"
-              type="text"
-              nz-input
-              placeholder="搜索"
-              i18n-placeholder
-            />
-          </nz-input-group>
-          <nz-button-group *nzSpaceItem>
-            <button nz-button nzType="text" nz-tooltip="刷新" i18n-nz-tooltip (click)="getData(true)">
-              <i nz-icon nzType="reload"></i>
-            </button>
-            <button nz-button nzType="text" nz-tooltip="重置" i18n-nz-tooltip (click)="clear()">
-              <i nz-icon nzType="clear"></i>
-            </button>
-          </nz-button-group>
-        </nz-space>
+        <ng-container *ngTemplateOutlet="view.searchRef"></ng-container>
       </nz-col>
       <nz-col></nz-col>
       <nz-col>
-        <nz-statistic *ngIf="view" [nzValue]="ds!.total" nzTitle="元素数量" i18n-nzTitle></nz-statistic>
+        <nz-statistic *ngIf="view" [nzValue]="view.ds.total" nzTitle="元素数量" i18n-nzTitle></nz-statistic>
       </nz-col>
     </nz-row>
   </nz-page-header-content>
 </nz-page-header>
 
 <div style="padding: 6px; height: calc(100% - 116px)">
-  <wpx-media-view
-    #view
-    [wpxData]="ds"
-    [wpxType]="'pictures'"
-    [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"
-    [wpxForm]="form"
-  ></wpx-media-view>
+  <app-pictures #view></app-pictures>
 </div>
 
-<ng-container *ngIf="ds.checkedNumber !== 0">
+<ng-container *ngIf="view.ds.checkedNumber !== 0">
   <nz-alert
     class="actions"
     nzType="info"
@@ -96,13 +55,15 @@
   >
     <ng-template #description>
       <span i18n>
-        已选中 <nz-tag>{{ ds.checkedNumber }}</nz-tag> 项
+        已选中 <nz-tag>{{ view.ds.checkedNumber }}</nz-tag> 项
       </span>
     </ng-template>
     <ng-template #bulk>
-      <a nz-button nzType="link" nzSize="small" (click)="ds.clearChecked()" i18n>取消选择</a>
+      <a nz-button nzType="link" nzSize="small" (click)="view.ds.clearChecked()" i18n>取消选择</a>
       <br />
-      <a style="float: right" nz-button nzType="link" nzSize="small" nzDanger (click)="view.bulkDelete()" i18n>删除</a>
+      <a style="float: right" nz-button nzType="link" nzSize="small" nzDanger (click)="view.mediaRef.bulkDelete()" i18n>
+        删除
+      </a>
     </ng-template>
   </nz-alert>
 </ng-container>
