--- a/src/app/common/components/richtext/richtext.component.html
+++ b/src/app/common/components/richtext/richtext.component.html
@@ -1,46 +1,4 @@
-<ng-template #searchRef>
-  <!--  <nz-space *ngIf="modalRef?.componentInstance as view">-->
-  <!--    <nz-button-group *nzSpaceItem>-->
-  <!--      <button nz-button nzType="text" nz-tooltip="刷新" i18n-nz-tooltip (click)="view.getData(true)">-->
-  <!--        <i nz-icon nzType="reload"></i>-->
-  <!--      </button>-->
-  <!--      <button nz-button nzType="text" nz-tooltip="重置" i18n-nz-tooltip (click)="view.clearSearch()">-->
-  <!--        <i nz-icon nzType="clear"></i>-->
-  <!--      </button>-->
-  <!--    </nz-button-group>-->
-  <!--    <nz-input-group *nzSpaceItem style="width: 180px" nzSuffixIcon="search">-->
-  <!--      <input-->
-  <!--        type="text"-->
-  <!--        nz-input-->
-  <!--        placeholder="搜索"-->
-  <!--        i18n-placeholder-->
-  <!--        [(ngModel)]="view.searchText"-->
-  <!--        [ngModelOptions]="{ standalone: true }"-->
-  <!--        (keyup.enter)="view.getData(true)"-->
-  <!--      />-->
-  <!--    </nz-input-group>-->
-  <!--    <nz-select-->
-  <!--      *nzSpaceItem-->
-  <!--      style="min-width: 180px"-->
-  <!--      nzMode="multiple"-->
-  <!--      nzPlaceHolder="筛选标签"-->
-  <!--      nzAllowClear-->
-  <!--      nzBorderless-->
-  <!--      [(ngModel)]="view.tagIds"-->
-  <!--      [ngModelOptions]="{ standalone: true }"-->
-  <!--      [nzServerSearch]="true"-->
-  <!--      (nzOnSearch)="view.getTags($event)"-->
-  <!--      (ngModelChange)="view.getData(true)"-->
-  <!--    >-->
-  <!--      <ng-container *ngFor="let item of view.tagOptions">-->
-  <!--        <nz-option [nzLabel]="item.name" [nzValue]="item._id"></nz-option>-->
-  <!--      </ng-container>-->
-  <!--    </nz-select>-->
-  <!--  </nz-space>-->
-</ng-template>
-
 <wpx-richtext
-  #richtext
   [wpxPlaceholder]="placeholder"
   [wpxFallback]="['assets', 'photon.svg'] | wpxAssets"
   [wpxPictures]="openPictures"
@@ -48,3 +6,20 @@
   [(ngModel)]="value"
   (ngModelChange)="onChanged($event)"
 ></wpx-richtext>
+
+<ng-template #header>
+  <ng-container *ngTemplateOutlet="instance.searchRef"></ng-container>
+  <ng-container *ngTemplateOutlet="instance.tagSearchRef"></ng-container>
+</ng-template>
+
+<ng-template #footer>
+  <nz-space>
+    <ng-container *nzSpaceItem>
+      <wpx-tags #tagsRef [wpxApi]="instance.tags"> </wpx-tags>
+      <button nz-button (click)="tagsRef.open()" i18n> 设置标签 </button>
+    </ng-container>
+    <ng-container *nzSpaceItem>
+      <ng-container *ngTemplateOutlet="instance.uploadRef"></ng-container>
+    </ng-container>
+  </nz-space>
+</ng-template>
