update: tags rename quick, add table customization

--- a/src/app/common/components/pictures/pictures.component.html
+++ b/src/app/common/components/pictures/pictures.component.html
@@ -6,7 +6,7 @@
   ></wpx-upload-transport>
 </ng-template>
 
-<wpx-tags [wpxApi]="tags"> </wpx-tags>
+<wpx-quick [wpxApi]="tags"> </wpx-quick>
 <ng-template #tagSearchRef>
   <nz-select
     style="min-width: 180px"
