--- a/src/app/common/components/richtext/richtext.component.html
+++ b/src/app/common/components/richtext/richtext.component.html
@@ -15,7 +15,7 @@
 <ng-template #footer>
   <nz-space>
     <ng-container *nzSpaceItem>
-      <wpx-tags #tagsRef [wpxApi]="instance.tags"> </wpx-tags>
+      <wpx-quick #tagsRef [wpxApi]="instance.tags"> </wpx-quick>
       <button nz-button (click)="tagsRef.open()" i18n> 设置标签 </button>
     </ng-container>
     <ng-container *nzSpaceItem>
