update: remove quick module

--- a/src/app/admin/space/space.component.html
+++ b/src/app/admin/space/space.component.html
@@ -1,6 +1,6 @@
 <nz-layout class="common-layout">
-  <nz-sider style="height: 100%" nzWidth="180px" nzTheme="light">
-    <ul nz-menu nzMode="inline" style="border: none">
+  <nz-sider class="nav" nzWidth="240px" nzTheme="light">
+    <ul nz-menu>
       <li nz-menu-group nzTitle="项目" i18n-nzTitle>
         <ul>
           <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'space', 'projects', 'managed']">
