--- a/src/app/admin/work/work.component.html
+++ b/src/app/admin/work/work.component.html
@@ -1,7 +1,7 @@
 <nz-layout class="common-layout">
   <nz-page-header [nzGhost]="false" nzTitle="工作区" i18n-nzTitle nzSubtitle="让开发管理便利起来" i18n-nzSubtitle>
     <nz-page-header-content>
-      <nz-row nzJustify="space-between">
+      <nz-row nzJustify="space-between" nzAlign="bottom">
         <nz-col>
           <ng-container *ngIf="app.user as user">
             <div class="user">
