--- a/src/experiment/resources/videos/videos.component.html
+++ b/src/experiment/resources/videos/videos.component.html
@@ -19,7 +19,7 @@
           nzShape="circle"
           nz-tooltip="设置标签"
           i18n-nz-tooltip
-          (click)="view.tagsRef.open()"
+          (click)="view.openTags()"
         >
           <i nz-icon nzType="tags"></i>
         </button>
