--- a/src/app/common/components/videos/videos-input.component.html
+++ b/src/app/common/components/videos/videos-input.component.html
@@ -22,8 +22,7 @@
       <ng-container *ngTemplateOutlet="instance.shopSearchRef"></ng-container>
     </ng-container>
     <ng-container *nzSpaceItem>
-      <wpx-quick #tagsRef [wpxApi]="instance.tags"> </wpx-quick>
-      <button nz-button (click)="tagsRef.open()" i18n> 设置标签 </button>
+      <button nz-button (click)="instance.openTags()" i18n> 设置标签 </button>
     </ng-container>
     <ng-container *nzSpaceItem>
       <ng-container *ngTemplateOutlet="instance.uploadRef"></ng-container>
