update: hide the apm chart

--- a/src/app/admin/monitor/db/db.component.html
+++ b/src/app/admin/monitor/db/db.component.html
@@ -1,34 +1,34 @@
-<nz-alert nzBanner nzType="success" [nzIcon]="iconTpl" [nzMessage]="textTpl">
-  <ng-template #iconTpl>
-    <span nz-icon nzType="loading"></span>
-  </ng-template>
-  <ng-template #textTpl>
-    <span i18n>已运行了 {{ uptime }} 小时</span>
-  </ng-template>
-</nz-alert>
+<!--<nz-alert nzBanner nzType="success" [nzIcon]="iconTpl" [nzMessage]="textTpl">-->
+<!--  <ng-template #iconTpl>-->
+<!--    <span nz-icon nzType="loading"></span>-->
+<!--  </ng-template>-->
+<!--  <ng-template #textTpl>-->
+<!--    <span i18n>已运行了 {{ uptime }} 小时</span>-->
+<!--  </ng-template>-->
+<!--</nz-alert>-->
 
-<div style="padding: 8px">
-  <nz-row [nzGutter]="[8, 8]">
-    <nz-col [nzSpan]="8">
-      <app-admin-monitor-db-available-connections></app-admin-monitor-db-available-connections>
-    </nz-col>
-    <nz-col [nzSpan]="8">
-      <app-admin-monitor-db-open-connections></app-admin-monitor-db-open-connections>
-    </nz-col>
-    <nz-col [nzSpan]="8">
-      <app-admin-monitor-db-commands-per-second></app-admin-monitor-db-commands-per-second>
-    </nz-col>
-    <nz-col [nzSpan]="12">
-      <app-admin-monitor-db-query-operations></app-admin-monitor-db-query-operations>
-    </nz-col>
-    <nz-col [nzSpan]="12">
-      <app-admin-monitor-db-document-operations></app-admin-monitor-db-document-operations>
-    </nz-col>
-    <nz-col [nzSpan]="12">
-      <app-admin-monitor-db-flushes></app-admin-monitor-db-flushes>
-    </nz-col>
-    <nz-col [nzSpan]="12">
-      <app-admin-monitor-db-network-io></app-admin-monitor-db-network-io>
-    </nz-col>
-  </nz-row>
-</div>
+<!--<div style="padding: 8px">-->
+<!--  <nz-row [nzGutter]="[8, 8]">-->
+<!--    <nz-col [nzSpan]="8">-->
+<!--      <app-admin-monitor-db-available-connections></app-admin-monitor-db-available-connections>-->
+<!--    </nz-col>-->
+<!--    <nz-col [nzSpan]="8">-->
+<!--      <app-admin-monitor-db-open-connections></app-admin-monitor-db-open-connections>-->
+<!--    </nz-col>-->
+<!--    <nz-col [nzSpan]="8">-->
+<!--      <app-admin-monitor-db-commands-per-second></app-admin-monitor-db-commands-per-second>-->
+<!--    </nz-col>-->
+<!--    <nz-col [nzSpan]="12">-->
+<!--      <app-admin-monitor-db-query-operations></app-admin-monitor-db-query-operations>-->
+<!--    </nz-col>-->
+<!--    <nz-col [nzSpan]="12">-->
+<!--      <app-admin-monitor-db-document-operations></app-admin-monitor-db-document-operations>-->
+<!--    </nz-col>-->
+<!--    <nz-col [nzSpan]="12">-->
+<!--      <app-admin-monitor-db-flushes></app-admin-monitor-db-flushes>-->
+<!--    </nz-col>-->
+<!--    <nz-col [nzSpan]="12">-->
+<!--      <app-admin-monitor-db-network-io></app-admin-monitor-db-network-io>-->
+<!--    </nz-col>-->
+<!--  </nz-row>-->
+<!--</div>-->
