--- a/console/src/app/login/login.component.html
+++ b/console/src/app/login/login.component.html
@@ -1,23 +1,23 @@
 <app-blank-layout>
   <nz-card [nzBordered]="false" [nzBorderless]="false">
-    <div class="title" i18n>🚀 欢迎使用</div>
+    <div class="title">🚀 欢迎使用</div>
     <form [formGroup]="form" nz-form nzLayout="vertical" (wpxSubmit)="submit($event)">
       <nz-form-item>
-        <nz-form-label><b i18n>电子邮件</b></nz-form-label>
+        <nz-form-label><b>电子邮件</b></nz-form-label>
         <nz-form-control>
           <nz-input-group [nzSuffix]="identitySuffix" nzPrefixIcon="mail">
             <ng-template #identitySuffix>
               <span *ngIf="email.value" nz-icon nzType="close-circle" (click)="email.reset()"> </span>
             </ng-template>
-            <input type="email" nz-input formControlName="email" placeholder="请输入电子邮件" i18n-placeholder />
+            <input type="email" nz-input formControlName="email" placeholder="请输入电子邮件" />
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
 
       <nz-form-item>
         <nz-form-label>
-          <b i18n>密码</b>
-          <a style="margin-left: 0.5em" routerLink="/forget" i18n>忘记了？</a>
+          <b>密码</b>
+          <a style="margin-left: 0.5em" routerLink="/forget">忘记了？</a>
         </nz-form-label>
         <nz-form-control>
           <nz-input-group [nzSuffix]="passwordSuffix" nzPrefixIcon="lock">
@@ -30,7 +30,6 @@
               formControlName="password"
               autocomplete="new-password"
               placeholder="请输入密码"
-              i18n-placeholder
             />
           </nz-input-group>
         </nz-form-control>
@@ -38,21 +37,17 @@
       <nz-form-item>
         <nz-form-control>
           <button nz-button nzBlock nzType="primary" [nzLoading]="loading" [disabled]="!form.valid">
-            <b i18n>登录</b>
+            <b>登录</b>
           </button>
         </nz-form-control>
       </nz-form-item>
 
-      <nz-divider nzPlain nzText="其他方式登录" i18n-nzText></nz-divider>
+      <nz-divider nzPlain nzText="其他方式登录"></nz-divider>
       <nz-space>
-        <a *nzSpaceItem nz-tooltip="Lark" i18n-nz-tooltip>
+        <a *nzSpaceItem nz-tooltip="Lark">
           <nz-avatar [nzSize]="30" nzShape="square" [nzSrc]="['assets', 'Feishu-Avatar.png'] | wpxAssets"></nz-avatar>
         </a>
       </nz-space>
     </form>
   </nz-card>
-
-  <div class="translation">
-    <app-translation></app-translation>
-  </div>
 </app-blank-layout>
