--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -7,10 +7,8 @@ body,
 }
 
 .header {
-  height: 56px;
-  line-height: 56px;
   padding: 0 12px;
   z-index: 1000;
-  background: #fafafa;
+  background: #fff;
   border-bottom: 1px solid #f0f0f0;
 }
