update: ng-zorro-antd 16.1.0

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -28,8 +28,10 @@
         </li>
       </ul>
     </nz-sider>
-    <nz-layout>
-      <nz-content style="padding: 8px"> </nz-content>
+    <nz-layout style="overflow: hidden auto">
+      <nz-content style="padding: 8px">
+        <router-outlet></router-outlet>
+      </nz-content>
     </nz-layout>
   </nz-layout>
 </nz-layout>
