--- a/src/app/login/login.component.less
+++ b/src/app/login/login.component.less
@@ -3,9 +3,8 @@ nz-header {
 }
 
 nz-content {
-  background: url('https://cdn.kainonly.com/assets/bg.svg') #fff no-repeat;
   background-size: 100%;
-  background-position: center;
+  background: #fff url('https://cdn.kainonly.com/assets/bg.svg') no-repeat center;
   flex: 1 1 auto;
 }
 
