--- a/src/styles.less
+++ b/src/styles.less
@@ -1,9 +1,7 @@
-@import 'ng-zorro-antd/ng-zorro-antd.less';
-@import 'ng-zorro-antd/ng-zorro-antd.aliyun.less';
+@import '~node_modules/ng-zorro-antd/ng-zorro-antd.less';
+@import '~node_modules/ng-zorro-antd/ng-zorro-antd.aliyun.less';
 
 nz-header.nav {
-  height: 60px;
-  line-height: 60px;
   padding: 0 12px;
   background: #fafafa;
   border-bottom: 1px solid #f0f0f0;
