update: table library

--- a/src/common/components/nav/nav.component.html
+++ b/src/common/components/nav/nav.component.html
@@ -3,7 +3,7 @@
     <nz-space nzAlign="center" nzSize="large">
       <ng-container *nzSpaceItem>
         <button nz-button nzType="text">
-          <span nz-icon nzType="appstore" nzTheme="outline"></span>
+          <i nz-icon nzType="appstore" nzTheme="outline"></i>
         </button>
       </ng-container>
       <ng-container *nzSpaceItem>
@@ -15,7 +15,7 @@
   <nz-col>
     <div class="center">
       <nz-badge nzDot>
-        <nz-avatar nzIcon="user" [nzShape]="'square'"></nz-avatar>
+        <nz-avatar nzText="KAIN" [nzShape]="'square'"></nz-avatar>
       </nz-badge>
     </div>
   </nz-col>
