--- a/src/styles.less
+++ b/src/styles.less
@@ -1,9 +1,14 @@
 @import '~node_modules/ng-zorro-antd/ng-zorro-antd.less';
 @import '~node_modules/ng-zorro-antd/ng-zorro-antd.aliyun.less';
 
+@nav-height: 54px;
+
 nz-header.nav {
+  height: @nav-height;
+  line-height: @nav-height;
   padding: 0 12px;
   background: #fafafa;
+  //background: #fff;
   border-bottom: 1px solid #f0f0f0;
 }
 
