--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -1,6 +1,6 @@
 <nz-layout style="height: 100%">
   <nz-header class="nav">
-    <app-nav></app-nav>
+    <app-nav menu="experiment"></app-nav>
   </nz-header>
   <nz-layout>
     <nz-sider nzWidth="240px" nzTheme="light">
@@ -12,7 +12,7 @@
       </ul>
     </nz-sider>
     <nz-layout style="overflow: hidden auto">
-      <nz-content>
+      <nz-content style="padding: 8px">
         <router-outlet></router-outlet>
       </nz-content>
     </nz-layout>
