--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -5,6 +5,10 @@
   <nz-layout>
     <nz-sider nzWidth="240px" nzTheme="light">
       <ul nz-menu style="border: none">
+        <li nz-menu-item nzMatchRouter routerLink="store">
+          <span nz-icon nzType="experiment" nzTheme="outline"></span>
+          <span>本地存储</span>
+        </li>
         <li nz-menu-item nzMatchRouter routerLink="table">
           <span nz-icon nzType="experiment" nzTheme="outline"></span>
           <span>表格</span>
