--- a/src/experiment/table/table.component.html
+++ b/src/experiment/table/table.component.html
@@ -1,27 +1,26 @@
-<ng-template #search>
-  <nz-space>
-    <nz-input-group *nzSpaceItem nzSuffixIcon="search">
-      <input style="width: 180px" nz-input nzBorderless placeholder="关键词搜索" />
-    </nz-input-group>
-    <nz-button-group *nzSpaceItem>
-      <button nz-button nzType="text" nz-tooltip="高级检索">
-        <span nz-icon nzType="filter" nzTheme="outline"></span>
-      </button>
-      <button nz-button nzType="text" nz-tooltip="重置条件">
-        <span nz-icon nzType="clear" nzTheme="outline"></span>
-      </button>
-      <button nz-button nzType="text" nz-tooltip="刷新数据">
-        <span nz-icon nzType="reload" nzTheme="outline"></span>
-      </button>
-    </nz-button-group>
-  </nz-space>
-</ng-template>
+<ng-template #search> </ng-template>
 
 <ng-template #extra>
   <nz-space>
     <button *nzSpaceItem nz-button nzType="primary"> 新增 </button>
   </nz-space>
 </ng-template>
+
+<wpx-table
+  [wpxData]="data"
+  [wpxColumns]="columns"
+  [wpxItemSize]="50"
+  [wpxExtra]="extra"
+  [wpxActions]="actions"
+  (wpxQuery)="getData($event)"
+>
+  <nz-space *wpxSearch>
+    <nz-input-group *nzSpaceItem nzSuffixIcon="search">
+      <input style="width: 180px" nz-input nzBorderless placeholder="关键词搜索" />
+    </nz-input-group>
+    <wpx-toolbox *nzSpaceItem></wpx-toolbox>
+  </nz-space>
+</wpx-table>
 
 <ng-template #actions let-v>
   <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="menu">
@@ -36,13 +35,3 @@
     </ul>
   </nz-dropdown-menu>
 </ng-template>
-
-<wpx-table
-  [wpxData]="data"
-  [wpxColumns]="columns"
-  [wpxItemSize]="50"
-  [wpxSearch]="search"
-  [wpxExtra]="extra"
-  [wpxActions]="actions"
-  (wpxQuery)="getData($event)"
-></wpx-table>
