--- a/src/experiment/table/table.component.html
+++ b/src/experiment/table/table.component.html
@@ -1,37 +1,37 @@
-<ng-template #search> </ng-template>
-
-<ng-template #extra>
-  <nz-space>
-    <button *nzSpaceItem nz-button nzType="primary"> 新增 </button>
-  </nz-space>
-</ng-template>
-
 <wpx-table
-  [wpxData]="data"
+  #tb
+  [wpxModel]="model"
   [wpxColumns]="columns"
   [wpxItemSize]="50"
-  [wpxExtra]="extra"
   [wpxActions]="actions"
-  (wpxQuery)="getData($event)"
+  (wpxUpdate)="getData()"
 >
-  <nz-space *wpxSearch>
+  <nz-space wpxSearch>
     <nz-input-group *nzSpaceItem nzSuffixIcon="search">
       <input style="width: 180px" nz-input nzBorderless placeholder="关键词搜索" />
     </nz-input-group>
     <wpx-toolbox *nzSpaceItem></wpx-toolbox>
   </nz-space>
-</wpx-table>
-
-<ng-template #actions let-v>
-  <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="menu">
-    <span nz-icon nzType="ellipsis" nzTheme="outline"></span>
-  </button>
-  <nz-dropdown-menu #menu="nzDropdownMenu">
-    <ul nz-menu>
+  <nz-space wpxExtra>
+    <ng-container *ngIf="model.selection.size as size">
+      <button *nzSpaceItem nz-button nzType="dashed" nz-dropdown [nzDropdownMenu]="menu"> 已选中 {{ size }} 项 </button>
+      <nz-dropdown-menu #menu="nzDropdownMenu">
+        <ul nz-menu>
+          <li nz-menu-item (click)="model.clearSelection()"> 取消选择 </li>
+        </ul>
+        <ul nz-menu>
+          <li nz-menu-item nzDanger> 删除 </li>
+        </ul>
+      </nz-dropdown-menu>
+    </ng-container>
+    <button *nzSpaceItem nz-button nzType="primary"> 新增 </button>
+  </nz-space>
+  <nz-dropdown-menu #actions="nzDropdownMenu">
+    <ul *ngIf="tb.actived as v" nz-menu>
       <li nz-menu-item>{{ v.no }}</li>
       <li nz-menu-divider></li>
       <li nz-menu-item> 修改 </li>
       <li nz-menu-item nzDanger> 删除 </li>
     </ul>
   </nz-dropdown-menu>
-</ng-template>
+</wpx-table>
