update: table library & experiment

--- a/src/experiment/table/table.component.html
+++ b/src/experiment/table/table.component.html
@@ -28,33 +28,17 @@
           </nz-col>
           <nz-col [nzSpan]="6">
             <nz-form-item>
-              <nz-form-label>订单号</nz-form-label>
+              <nz-form-label>姓名</nz-form-label>
               <nz-form-control>
-                <input nz-input formControlName="no" />
+                <input nz-input formControlName="name" />
               </nz-form-control>
             </nz-form-item>
           </nz-col>
           <nz-col [nzSpan]="6">
             <nz-form-item>
-              <nz-form-label>订单号</nz-form-label>
+              <nz-form-label>账户</nz-form-label>
               <nz-form-control>
-                <input nz-input formControlName="no" />
-              </nz-form-control>
-            </nz-form-item>
-          </nz-col>
-          <nz-col [nzSpan]="6">
-            <nz-form-item>
-              <nz-form-label>订单号</nz-form-label>
-              <nz-form-control>
-                <input nz-input formControlName="no" />
-              </nz-form-control>
-            </nz-form-item>
-          </nz-col>
-          <nz-col [nzSpan]="6">
-            <nz-form-item>
-              <nz-form-label>订单号</nz-form-label>
-              <nz-form-control>
-                <input nz-input formControlName="no" />
+                <input nz-input formControlName="account" />
               </nz-form-control>
             </nz-form-item>
           </nz-col>
